fixed nav/footer/splash front-end

--- a/public/assets/css/menu.css
+++ b/public/assets/css/menu.css
@@ -1,4 +1,65 @@
-/*------------------Mobile Navbar------------------*/
+/*------------------Nav Menu------------------*/
+.nav-bar-right {
+    display: flex;
+    padding-right: 10px;
+}
+
+
+.menu-hover-lines {
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 500;
+  letter-spacing: 1px;
+  transition: all 0.35s ease;
+}
+
+.menu-hover-lines li a {
+  padding: 0.75rem 0;
+  color: #fefefe;
+  position: relative;
+  margin-left: 1rem;
+}
+
+.menu-hover-lines li:first-child a {
+  margin-left: 0;
+}
+
+.menu-hover-lines li.active > a {
+  background-color: transparent;
+}
+
+.menu-hover-lines a:before,
+.menu-hover-lines a::after {
+  height: 3px;
+  position: absolute;
+  content: '';
+  transition: all 0.35s ease;
+  background-color: #fefefe;
+  width: 0;
+}
+
+.menu-hover-lines a::before {
+  top: 0;
+  left: 0;
+}
+
+.menu-hover-lines a::after {
+  bottom: 0;
+  right: 0;
+}
+
+.menu-hover-lines a:hover,
+.menu-hover-lines li.active > a {
+  color: #fefefe;
+  transition: all 0.35s ease;
+}
+
+.menu-hover-lines a:hover::before,
+.menu-hover-lines .active a::before,
+.menu-hover-lines a:hover::after,
+.menu-hover-lines .active a::after {
+  width: 100%;
+}/*------------------Mobile Navbar------------------*/
 
 .nav-bar {
     display: -webkit-flex;
@@ -17,6 +78,7 @@
 
 .nav-bar .nav-bar-logo {
     padding: .1rem;
+    padding-left: 10px; 
 }
 
 .nav-bar li {
@@ -68,6 +130,9 @@
 @media screen and (max-width: 39.9375em) {
     .nav-bar .offcanvas-trigger {
         padding: 0.9rem;
+    }
+    img.logo {
+        display: ;
     }
 }
 
