--- a/public/assets/css/button.css
+++ b/public/assets/css/button.css
@@ -222,25 +222,7 @@
     text-transform: uppercase;
 }
 
-
-/*------------------Add Contact Button------------------*/
-
-
-/*.plus-minus-input {
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
+#googleButton {
+    display: flex;
+    justify-content: center;
 }
-
-.plus-minus-input .input-group-field {
-  text-align: center;
-  margin-left: 0.5rem;
-  margin-right: 0.5rem;
-  padding: 1rem;
-}
-
-.plus-minus-input .input-group-field::-webkit-inner-spin-button,
-.plus-minus-input .input-group-field ::-webkit-outer-spin-button {
-  -webkit-appearance: none;
-          appearance: none;
-}*/
