pulse button center

--- a/public/assets/css/button.css
+++ b/public/assets/css/button.css
@@ -213,7 +213,9 @@
 
 #pulse-button {
     margin-bottom: 50px;
+    margin-top: 50px;
 }
+
 
 
 /*------------------Save Profile Button------------------*/
