made navbar links centered on small-screen, updated pulse-button, fixed footer text colors

--- a/public/assets/css/menu.css
+++ b/public/assets/css/menu.css
@@ -221,3 +221,16 @@
 .hamburger .line:last-child {
     margin-bottom: 0;
 }
+
+/*Menu Links*/
+
+#menu-links {
+    display: flex;
+    margin-right: 10px;
+}
+
+@media screen and (max-width: 39.9375em) {
+        #menu-links {
+            margin-right: auto;
+    }
+}
