--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -106,3 +106,26 @@ body {
 .mobile-bottom-bar .footer-icon:hover {
     color: #a8b8c3;
 }
+
+/*------------------About Page---------------------*/
+
+
+.four-up-feature {
+  text-align: center;
+}
+
+.four-up-feature .four-up-feature-header {
+  margin-bottom: 3rem;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.four-up-feature .four-up-feature-image {
+  margin-bottom: 2rem;
+}
+
+.four-up-feature .four-up-feature-text {
+  margin-bottom: 2rem;
+}
+
