--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -17,13 +17,7 @@ body {
     font-family: 'Montserrat', sans-serif;
 }
 
-#welcome {
-    /*text-transform: uppercase;*/
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 700;
-}
-
-#about-header {
+.app-header-font {
     /*text-transform: uppercase;*/
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
